--- a/index.html
+++ b/index.html
@@ -1,49 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Digital Store</title>
-    <link rel="shortcut icon" href="./assets/logo-digital.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header class="px-28 py-10">
-        <div class="flex items-center justify-between">
-            <div class="flex gap-2">
-                <img src="./assets/logo-digital.svg" alt="logo Digital College">
-                <h1 class="text-4xl text-(--primary-color) font-semibold">Digital Store</h1>
-            </div>
-
-            <input type="text" placeholder="Pesquisar produto..."
-                class="bg-(--light-gray3) py-2 px-4 rounded-lg bg-[url('/assets/icone-pesquisa.svg')] bg-no-repeat bg-right 
-                focus:placeholder-transparent focus:border-pink-500 focus:outline focus:outline-pink-500 w-96" />
-
-            <div>
-                <a href="#" class="bg-(--primary-color) text-white rounded-lg px-7 py-3 font-bold text-sm">
-                    Entrar
-                </a>
-            </div>
-
-            <div class="relative">
-                <img src="/assets/icone-carrinho.svg" alt="imagem do carrinho">
-                <div class="flex justify-center items-center absolute bg-(--tertiary-color) text-white font-bold text-xs rounded-full 
-                    w-5 h-5 bottom-4 left-2">
-                    2
-                </div>
-            </div>            
+    <link
+      rel="shortcut icon"
+      href="./assets/logo-digital.svg"
+      type="image/svg+xml"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="px-28 py-10 h-[22vh]">
+      <div class="flex items-center justify-between">
+        <div class="flex gap-2">
+          <img src="./assets/logo-digital.svg" alt="logo Digital College" />
+          <h1 class="text-4xl text-(--primary-color) font-semibold">
+            Digital Store
+          </h1>
         </div>
-       
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Produtos</a></li>
-                <li><a href=""> Categorias</a></li>
-                <li><a href="">Meus Pedidos</a></li>
-            </ul>
-            
-        </nav>
+        <input
+          type="text"
+          placeholder="Pesquisar produto..."
+          class="bg-(--light-gray3) py-2 px-4 rounded-lg bg-[url('/assets/icone-pesquisa.svg')] bg-no-repeat bg-right focus:placeholder-transparent focus:border-pink-500 focus:outline focus:outline-pink-500 w-96"
+        />
+
+        <div>
+          <a
+            href="#"
+            class="bg-(--primary-color) text-white rounded-lg px-7 py-3 font-bold text-sm"
+          >
+            Entrar
+          </a>
+        </div>
+
+        <div class="relative">
+          <img src="/assets/icone-carrinho.svg" alt="imagem do carrinho" />
+          <div
+            class="flex justify-center items-center absolute bg-(--tertiary-color) text-white font-bold text-xs rounded-full w-5 h-5 bottom-4 left-2"
+          >
+            2
+          </div>
+        </div>
+      </div>
+
+      <nav class="pl-32 py-15">
+        <ul class="flex gap-6 text-(--dark-gray2)">
+          <li class="hover:text-(--primary-color) hover:font-bold">
+            <a href="#"> Home</a>
+          </li>
+          <li class="hover:text-(--primary-color) hover:font-bold">
+            <a href="# ">Produtos</a>
+          </li>
+          <li class="hover:text-(--primary-color) hover:font-bold">
+            <a href="#"> Categorias</a>
+          </li>
+          <li class="hover:text-(--primary-color) hover:font-bold">
+            <a href="#">Meus Pedidos</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-</body>
+    <main>
+        <section class="flex flex-col md:flex-row px-6 md:px-[108px] bg-(--light-gray3) py-8 md:py-[78px] h-auto md:h-[680px] relative overflow-hidden">
+            <div class="flex flex-col gap-5 w-full md:w-[466px] text-center md:text-left">
+                <p class="text-(--warning-color) font-bold">
+                    Melhores ofertas personalizadas
+                </p>
+                <h2 class="font-extrabold text-4xl md:text-6xl animate-pulse">
+                    Queima de estoque Nike 🔥
+                </h2>
+                <p class="text-(--dark-gray2) text-base md:text-lg">
+                    O <em>Nike Air</em> combina inovação e estilo icônico, oferecendo conforto incomparável com sua tecnologia de amortecimento a ar. Projetado para garantir leveza e suporte, este modelo é perfeito tanto para atividades esportivas quanto para o dia a dia. Ele une desempenho, durabilidade e um design moderno que nunca sai de moda
+                </p>
+                <a href="#" class="flex items-center justify-center bg-(--primary-color) text-(--light-gray3) font-bold w-[160px] h-[48px] md:w-[220px] rounded-lg mx-auto md:mx-0 hover:bg-(--primary-color-hover) transition-all duration-300">
+                    Ver Ofertas
+                </a>
+                <img src="/assets/art-imagesapato-nike.svg" alt="Foto de um tenis branco" class="absolute right-40  w-[60vw] animate-bounce" />
+                <img src="/assets/Ornament.svg" alt="Firula do site - by wendell" class="absolute top-12 right-8 animate-bounce">
+        </section>
+    </main>
+
+  </body>
 </html>
