--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="px-28 py-10 h-[22vh]">
+    <header class="px-28 py-10 h-[25vh]">
       <div class="flex items-center justify-between">
         <div class="flex gap-2">
           <img src="./assets/logo-digital.svg" alt="logo Digital College" />
@@ -82,6 +82,56 @@
                 <img src="/assets/Ornament.svg" alt="Firula do site - by wendell" class="absolute top-12 right-8 animate-bounce">
         </section>
     </main>
+  </section>
+  <section class="flex flex-col gap-15 px-[108px] py-[42px]">
+      <div class="flex flex-col gap-10">
+          <h4 class="text-(--dark-gray2) font-bold text-2xl">
+              Coleções em destaque
+          </h4>
+          <ul class="grid grid-cols-3 gap-3.5 h-68">
+              <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(assets/colecao-DropSupreme.svg)] bg-no-repeat bg-bottom-right">
+                  <div class="w-1/2 z-10">
+                  <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray2) w-[96px] text-center py-1.5 text-sm">
+                      30% OFF
+                  </p>
+                  <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
+                      Novo drop Supreme
+                  </h5>
+                  <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
+                      Comprar
+                  </a>
+              </div>
+              </li>
+              <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(assets/colecao-Adidas.svg)] bg-no-repeat bg-bottom-right">
+                  <div class="w-1/2 z-10">
+                  <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray2) w-[96px] text-center py-1.5 text-sm">
+                      30% OFF
+                  </p>
+                  <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
+                      Coleção Adidas
+                  </h5>
+                  <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
+                      Comprar
+                  </a>
+              </div>
+              </li>
+              <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(/assets/colecao-BeatBass.svg)] bg-no-repeat bg-bottom-right">
+                  <div class="w-1/2 z-10">
+                  <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray2) w-[96px] text-center py-1.5 text-sm">
+                      30% OFF
+                  </p>
+                  <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
+                      Novo<br> Beats Bass
+                  </h5>
+                  <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
+                      Comprar
+                  </a>
+              </div>
+              </li>
+          </ul>
+      </div>
+      <div></div>
+  </section>
 
   </body>
 </html>
