--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Digital Store</title>
     <link
-      rel="shortcut icon"
-      href="./assets/logo-digital.svg"
+      rel="icone logo Digital College"
+      href="/assets/logo-digital.svg"
       type="image/svg+xml"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="px-28 py-10 h-[25vh]">
+    <header class="px-28 py-10 h-[22vh]">
       <div class="flex items-center justify-between">
         <div class="flex gap-2">
           <img src="./assets/logo-digital.svg" alt="logo Digital College" />
@@ -64,74 +63,269 @@
       </nav>
     </header>
     <main>
-        <section class="flex flex-col md:flex-row px-6 md:px-[108px] bg-(--light-gray3) py-8 md:py-[78px] h-auto md:h-[680px] relative overflow-hidden">
-            <div class="flex flex-col gap-5 w-full md:w-[466px] text-center md:text-left">
+        <section class="flex px-[108px] bg-(--light-gray-3) py-[78px] h-[680px] relative max-sm:p-0">
+            <div class="flex flex-col gap-5 w-[466px] max-sm:justify-end max-sm:items-center">
                 <p class="text-(--warning-color) font-bold">
                     Melhores ofertas personalizadas
                 </p>
-                <h2 class="font-extrabold text-4xl md:text-6xl animate-pulse">
+                <h2 class="font-extrabold text-6xl">
                     Queima de estoque Nike 🔥
                 </h2>
-                <p class="text-(--dark-gray2) text-base md:text-lg">
-                    O <em>Nike Air</em> combina inovação e estilo icônico, oferecendo conforto incomparável com sua tecnologia de amortecimento a ar. Projetado para garantir leveza e suporte, este modelo é perfeito tanto para atividades esportivas quanto para o dia a dia. Ele une desempenho, durabilidade e um design moderno que nunca sai de moda
+                <p class="text-(--dark-gray-2) text-lg">
+                    Consequat culpa exercitation mollit nisi excepteur do do tempor laboris eiusmod irure consectetur.
                 </p>
-                <a href="#" class="flex items-center justify-center bg-(--primary-color) text-(--light-gray3) font-bold w-[160px] h-[48px] md:w-[220px] rounded-lg mx-auto md:mx-0 hover:bg-(--primary-color-hover) transition-all duration-300">
+                <a href="#" class="flex items-center justify-center bg-(--primary-color) text-(--light-gray-3) font-bold w-[220px] h-[48px] rounded-lg">
                     Ver Ofertas
                 </a>
-                <img src="/assets/art-imagesapato-nike.svg" alt="Foto de um tenis branco" class="absolute right-40  w-[60vw] animate-bounce" />
-                <img src="/assets/Ornament.svg" alt="Firula do site - by wendell" class="absolute top-12 right-8 animate-bounce">
+            </div>
+            <img src="/assets/pictures/art-imagesapato-nike.svg" alt="Foto de um tenis branco e logo vermelha" class="absolute right-28 bottom-8 max-sm:bottom-0 max-sm:right-6.5 max-sm:top-2"/>
+            <img src="/assets/ornaments/Ornament.svg" alt=" vetor em forma de circulo pontilhados em amarelo " class="absolute top-12 right-8 max-sm:top-4 max-sm:left-[80%]">
+        </section>
+        <section class="flex flex-col gap-15 px-[108px] py-[42px]">
+            <div class="flex flex-col gap-10">
+                <h4 class="text-(--dark-gray-2) font-bold text-2xl">
+                    Coleções em destaque
+                </h4>
+                <ul class="grid grid-cols-3 gap-3.5 h-68">
+                    <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(assets/pictures/art-camisaSupreme.svg)] bg-no-repeat bg-bottom-right">
+                        <div class="w-1/2 z-10">
+                        <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray-2) w-[96px] text-center py-1.5 text-sm">
+                            30% OFF
+                        </p>
+                        <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
+                            Novo drop Supreme
+                        </h5>
+                        <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
+                            Comprar
+                        </a>
+                    </div>
+                    </li>
+                    <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(assets/pictures/art-tenis.svg)] bg-no-repeat bg-bottom-right">
+                        <div class="w-1/2 z-10">
+                        <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray-2) w-[96px] text-center py-1.5 text-sm">
+                            30% OFF
+                        </p>
+                        <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
+                            Coleção Adidas
+                        </h5>
+                        <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
+                            Comprar
+                        </a>
+                    </div>
+                    </li>
+                    <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(assets/pictures/art-headphone.svg)] bg-no-repeat bg-bottom-right">
+                        <div class="w-1/2 z-10">
+                        <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray-2) w-[96px] text-center py-1.5 text-sm">
+                            30% OFF
+                        </p>
+                        <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
+                            Novo<br> Beats Bass
+                        </h5>
+                        <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
+                            Comprar
+                        </a>
+                    </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="bg-[url(assets/ornaments/house-destaque.svg)] bg-no-repeat bg-center object-contain flex flex-col items-center gap-5 pt-5.5 h-[318px]">
+                <h1 class="font-bold text-2xl text-(--dark-gray-2)">
+                    Coleções em destaque
+                </h1>
+                <ul class="flex gap-8">
+                    <li><a href="#">
+                        <div class="bg-[url(assets/icon/icon-camisa.svg)] w-[104px] h-[104px] bg-white bg-no-repeat bg-center rounded-full"></div>
+                        <p class="font-bold text-sm text-(--dark-gray-2) text-center">Camisetas</p>
+                    </a></li>
+                    <li><a href="#">
+                        <div class="bg-[url(assets/icon/icon-calça.svg)] w-[104px] h-[104px] bg-white bg-no-repeat bg-center rounded-full"></div>
+                        <p class="font-bold text-sm text-(--dark-gray-2) text-center">Calças</p>
+                    </a></li>
+                    <li><a href="#">
+                        <div class="bg-[url(assets/icon/icon-calça1.svg)] w-[104px] h-[104px] bg-white bg-no-repeat bg-center rounded-full"></div>
+                        <p class="font-bold text-sm text-(--dark-gray-2) text-center">Bonés</p>
+                    </a></li>
+                    <li><a href="#">
+                        <div class="bg-[url(assets/icon/icon-fone-ouvido.svg)] w-[104px] h-[104px] bg-white bg-no-repeat bg-center rounded-full"></div>
+                        <p class="font-bold text-sm text-(--dark-gray-2) text-center">Headphones</p>
+                    </a></li>
+                    <li><a href="#">
+                        <div class="bg-[url(assets/icon/icon-tenis.svg)] w-[104px] h-[104px] bg-white bg-no-repeat bg-center rounded-full"></div>
+                        <p class="font-bold text-sm text-(--dark-gray-2) text-center">Tênis</p>
+                    </a></li>
+                </ul>
+            </div>
+        </section>
+        <section class="px-[108px]">
+            <div class="flex justify-between mb-5">
+                <h4 class="text-(--dark-gray-2) font-bold text-2xl">
+                    Produtos em  alta
+                </h4>
+                <div class="flex gap-2 items-center">
+                    <a href="#" class="text-(--primary-color) text-[18px]">
+                        Ver todos
+                    </a>
+                    <img src="/assets/icon/seta-direita.svg" alt="Flecha apontando pra direita" class="w-[24px]">
+                </div>
+            </div>
+            <ul class="grid grid-cols-4">
+                <li class="mb-5">
+                <div class="bg-[url(assets/pictures/img-tenis-emalta.svg)] w-[292px] h-[320px] bg-white bg-no-repeat bg-center relative">
+                    <div class="flex justify-center items-center bg-[#E7FF86] font-bold text-sm h-[32px] w-[96px] rounded-4xl absolute left-5 top-5">50% off</div>
+                </div>
+                    <div>
+                        <p class="text-xs text-(--light-gray) font-bold">
+                            Tênis
+                        </p>
+                        <h5 class="text-2xl text-(--dark-gray-2)">
+                            K-Swiss V8 - Masculino
+                        </h5>
+                        <div class="flex gap-2">
+                        <h5 class="text-(--light-gray) line-through text-2xl">
+                            $200
+                        </h5>
+                        <h5 class="font-bold text-2xl">
+                            $100
+                        </h5>
+                    </div>
+                </div>
+                </li>
+                <li class="mb-5">
+                <div class="bg-[url(assets/pictures/img-tenis-emalta.svg)] w-[292px] h-[320px] bg-white bg-no-repeat bg-center relative">
+                    <div class="flex justify-center items-center bg-[#E7FF86] font-bold text-sm h-[32px] w-[96px] rounded-4xl absolute left-5 top-5">50% off</div>
+                </div>
+                    <div>
+                        <p class="text-xs text-(--light-gray) font-bold">
+                            Tênis
+                        </p>
+                        <h5 class="text-2xl text-(--dark-gray-2)">
+                            K-Swiss V8 - Masculino
+                        </h5>
+                        <div class="flex gap-2">
+                        <h5 class="text-(--light-gray) line-through text-2xl">
+                            $200
+                        </h5>
+                        <h5 class="font-bold text-2xl">
+                            $100
+                        </h5>
+                    </div>
+                </div>
+                </li>
+                <li class="mb-5">
+                <div class="bg-[url(assets/pictures/img-tenis-emalta.svg)] w-[292px] h-[320px] bg-white bg-no-repeat bg-center relative">
+                </div>
+                    <div>
+                        <p class="text-xs text-(--light-gray) font-bold">
+                            Tênis
+                        </p>
+                        <h5 class="text-2xl text-(--dark-gray-2)">
+                            K-Swiss V8 - Masculino
+                        </h5>
+                        <h5 class="font-bold text-2xl">
+                            $100
+                        </h5>
+                </div>
+                </li>
+                <li class="mb-5">
+                <div class="bg-[url(assets/pictures/img-tenis-emalta.svg)] w-[292px] h-[320px] bg-white bg-no-repeat bg-center relative">
+                </div>
+                    <div>
+                        <p class="text-xs text-(--light-gray) font-bold">
+                            Tênis
+                        </p>
+                        <h5 class="text-2xl text-(--dark-gray-2)">
+                            K-Swiss V8 - Masculino
+                        </h5>
+                        <h5 class="font-bold text-2xl">
+                            $100
+                        </h5>
+                </div>
+                </li>
+                <li class="mb-5">
+                <div class="bg-[url(assets/pictures/img-tenis-emalta.svg)] w-[292px] h-[320px] bg-white bg-no-repeat bg-center relative">
+                </div>
+                    <div>
+                        <p class="text-xs text-(--light-gray) font-bold">
+                            Tênis
+                        </p>
+                        <h5 class="text-2xl text-(--dark-gray-2)">
+                            K-Swiss V8 - Masculino
+                        </h5>
+                        <h5 class="font-bold text-2xl">
+                            $100
+                        </h5>
+                </div>
+                </li>
+                <li class="mb-5">
+                <div class="bg-[url(assets/pictures/img-tenis-emalta.svg)] w-[292px] h-[320px] bg-white bg-no-repeat bg-center relative">
+                </div>
+                    <div>
+                        <p class="text-xs text-(--light-gray) font-bold">
+                            Tênis
+                        </p>
+                        <h5 class="text-2xl text-(--dark-gray-2)">
+                            K-Swiss V8 - Masculino
+                        </h5>
+                        <h5 class="font-bold text-2xl">
+                            $100
+                        </h5>
+                </div>
+                </li>
+                <li class="mb-5">
+                <div class="bg-[url(assets/pictures/img-tenis-emalta.svg)] w-[292px] h-[320px] bg-white bg-no-repeat bg-center relative">
+                </div>
+                    <div>
+                        <p class="text-xs text-(--light-gray) font-bold">
+                            Tênis
+                        </p>
+                        <h5 class="text-2xl text-(--dark-gray-2)">
+                            K-Swiss V8 - Masculino
+                        </h5>
+                        <h5 class="font-bold text-2xl">
+                            $100
+                        </h5>
+                </div>
+                </li>
+                <li class="mb-5">
+                <div class="bg-[url(assets/pictures/img-tenis-emalta.svg)] w-[292px] h-[320px] bg-white bg-no-repeat bg-center relative">
+                </div>
+                    <div>
+                        <p class="text-xs text-(--light-gray) font-bold">
+                            Tênis
+                        </p>
+                        <h5 class="text-2xl text-(--dark-gray-2)">
+                            K-Swiss V8 - Masculino
+                        </h5>
+                        <h5 class="font-bold text-2xl">
+                            $100
+                        </h5>
+                </div>
+                </li>
+               
+            </ul>
+        </section>
+        <section class="flex justify-center items-center bg-white py-20 px-18 gap-28">
+            <div>
+                <div class="w-[456px] h-[456px] bg-linear-(--secondary-gradient) rounded-full  relative">
+                    <img src="/assets/pictures/img-nikejordan.svg" alt="tenis personalizado jogador de bascket jordan" class="w-[574px] absolute top-[12%] right-[12%] scale-135">
+                </div>
+            </div>
+            <div class="flex flex-col gap-4 w-[40%]">
+                <p class="text-sm text-(--primary-color) font-bold">
+                    Oferta especial
+                </p>
+                <h2 class="font-bold text-(--dark-gray-2) text-5xl">
+                    Air Jordan edição de colecionador
+                </h2>
+                <p class="text-(--dark-gray-2)">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                </p>
+                <a href="#" class="flex items-center justify-center bg-(--primary-color) text-(--light-gray-3) font-bold w-[220px] h-[48px] rounded-lg mt-6">
+                    Ver Ofertas
+                </a>
+            </div>
         </section>
     </main>
-  </section>
-  <section class="flex flex-col gap-15 px-[108px] py-[42px]">
-      <div class="flex flex-col gap-10">
-          <h4 class="text-(--dark-gray2) font-bold text-2xl">
-              Coleções em destaque
-          </h4>
-          <ul class="grid grid-cols-3 gap-3.5 h-68">
-              <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(assets/colecao-DropSupreme.svg)] bg-no-repeat bg-bottom-right">
-                  <div class="w-1/2 z-10">
-                  <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray2) w-[96px] text-center py-1.5 text-sm">
-                      30% OFF
-                  </p>
-                  <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
-                      Novo drop Supreme
-                  </h5>
-                  <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
-                      Comprar
-                  </a>
-              </div>
-              </li>
-              <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(assets/colecao-Adidas.svg)] bg-no-repeat bg-bottom-right">
-                  <div class="w-1/2 z-10">
-                  <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray2) w-[96px] text-center py-1.5 text-sm">
-                      30% OFF
-                  </p>
-                  <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
-                      Coleção Adidas
-                  </h5>
-                  <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
-                      Comprar
-                  </a>
-              </div>
-              </li>
-              <li  class="flex bg-[#D8E3F2] pl-8 pt-8 rounded-md relative bg-[url(/assets/colecao-BeatBass.svg)] bg-no-repeat bg-bottom-right">
-                  <div class="w-1/2 z-10">
-                  <p class="bg-[#E7FF86] rounded-4xl font-bold text-(--dark-gray2) w-[96px] text-center py-1.5 text-sm">
-                      30% OFF
-                  </p>
-                  <h5 class="font-bold text-(--dark-gray) text-4xl mt-2.5 mb-8">
-                      Novo<br> Beats Bass
-                  </h5>
-                  <a href="#" class="text-(--primary-color) bg-white rounded-xl font-bold px-12 py-4.5">
-                      Comprar
-                  </a>
-              </div>
-              </li>
-          </ul>
-      </div>
-      <div></div>
-  </section>
 
   </body>
 </html>
